# qt-cmake-template

./: CMakeLists.txt  README.md  run.sh
QtTemplate/main/: CMakeLists.txt  main.cpp
QtTemplate/main/Module/: Module.cpp  Module.hpp
QtTemplate/main/SlotExample/: SlotExample.cpp  SlotExample.hpp
QtTemplate/main/UserInterface/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QtTemplate/tests/: CMakeLists.txt
QtTemplate/tests/ModuleTests/: ModuleTest.cpp
QtTemplate/tests/SlotExampleTest/: SlotExampleTest.cpp
